Bug 65048 - [G33 SNA] Xv video tearing regression in GIT 195a51353c3af7bd253227da5f759f06cea01f73
Summary: [G33 SNA] Xv video tearing regression in GIT 195a51353c3af7bd253227da5f759f06...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-27 19:20 UTC by Matti Hämäläinen
Modified: 2013-05-27 20:16 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Matti Hämäläinen 2013-05-27 19:20:12 UTC
Commit 195a51353c3af7bd253227da5f759f06cea01f73 (sna/video: Convert to a pure Xv backend) introduces tearing in Xv output, for example with MPlayer2 video player. Pretty easy to see with a video that has horizontal movement. The tearing point slowly changes, moving downwards.

Used http://tnsp.org/~ccr/intel-gfx/tearing_test.mp4 for testing.


-- Window manager: WindowMaker 0.95.4
-- chipset: 00:02.0 VGA compatible controller: Intel Corporation 82G33/G31
Express Integrated Graphics Controller (rev 10)
-- system architecture: i686 / 32bit
-- xf86-video-intel: GIT 7e7d0ad15bafc4624f8c2ccf73c08ead5cc6fd6a (2.21.8 tagged release)
-- xserver: X.Org X Server 1.12.4-6 from latest Debian testing
-- mesa: 8.0.5-6 from Debian testing
-- libpixman: 0.26.0-4
-- libdrm version: 2.4.40-1
-- kernel version: 3.9.4 (vanilla from kernel.org)
-- Linux distribution: current Debian Testing
-- Machine or mobo model: Asus P5KPL-CM
-- Display connector: VGA
Comment 1 Chris Wilson 2013-05-27 20:16:51 UTC
And I thought I was being so clever in honouring the sync parameter passed down by Xv!

commit f38d037b94aacdccb2aaa058bbe48d1c8079d604
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon May 27 21:07:20 2013 +0100

    sna/video: Correct interpretation of 'sync'
    
    The 'sync' parameter past along XvPutImage is not a request for us to
    perform the operation synchronised to the vblank, rather a hint that the
    client wishes the operation to be synchronous. In Xorg, this is
    implemented as an immediate ShmCompletion event so make sure we flush
    the operation to hw in this case.
    
    Fixes regression from
    commit 195a51353c3af7bd253227da5f759f06cea01f73 [2.21.8]
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Tue Apr 9 19:13:46 2013 +0100
    
        sna/video: Convert to a pure Xv backend
    
    Reported-by: Matti Hamalainen <ccr@tnsp.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=65048
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.